add flex and grid properties to css

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,8 @@ body {
   border: 1px solid #222;
   border-radius: 8px;
   padding: 1rem;
+  display: flex;
+  flex-direction: column;
 }
 
 .emoji h2 {
@@ -24,4 +26,21 @@ body {
 
 .icon {
   font-size: 4rem;
+}
+
+.emojis {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    gap: 15px;
+}
+
+.emojis p {
+    flex-grow: 1;
+}
+
+.icon {
+    display: flex;
+    justify-content: center;
+    order: -1;
 }
